
cmake_minimum_required(VERSION 3.7.2)
project(pdfium_by_cmake)

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG -DDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG -DDEBUG")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /EHsc /MP")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /MP ")  

add_definitions( -DUNICODE -DNOMINMAX -DUSE_LIBJPEG_TURBO -DPNG_PREFIX  -DHAVE_BOOLEAN -DUSE_SYSTEM_ICUUC -DUSE_SYSTEM_LIBJPEG -DUSE_SYSTEM_LCMS2 -DUSE_SYSTEM_ZLIB -DUSE_SYSTEM_LIBOPENJPEG2 -DOPJ_STATIC -DDEFINE_PS_TABLES)
# no skia, V8, or xfa (xfa seems to require V8 anyway)

set(PdfiumDir "${CMAKE_CURRENT_LIST_DIR}")

include_directories( 
    ${PdfiumDir}
    ${PdfiumDir}/third_party/freetype/src/include
    ${PdfiumDir}/../../installed/x86-windows-mega/include
    ${PdfiumDir}/../../installed/x64-windows-mega/include
)

message("include vcpkg: ${PdfiumDir}/../../vcpkg/installed/${TARGET_TRIPLET}/include")

add_library(pdfium STATIC

${PdfiumDir}/core/fdrm/crypto/fx_crypt.cpp
${PdfiumDir}/core/fdrm/crypto/fx_crypt_aes.cpp
${PdfiumDir}/core/fdrm/crypto/fx_crypt_sha.cpp
#${PdfiumDir}/core/fdrm/crypto/fx_crypt_unittest.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/Adobe-CNS1-UCS2_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/B5pc-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/B5pc-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/cmaps_cns1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/CNS-EUC-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/CNS-EUC-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/ETen-B5-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/ETen-B5-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/ETenms-B5-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/ETenms-B5-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/HKscs-B5-H_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/HKscs-B5-V_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/UniCNS-UCS2-H_3.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/UniCNS-UCS2-V_3.cpp
${PdfiumDir}/core/fpdfapi/cmaps/CNS1/UniCNS-UTF16-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/fpdf_cmaps.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/Adobe-GB1-UCS2_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/cmaps_gb1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GB-EUC-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GB-EUC-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBK-EUC-H_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBK-EUC-V_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBK2K-H_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBK2K-V_5.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBKp-EUC-H_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBKp-EUC-V_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBpc-EUC-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/GBpc-EUC-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/UniGB-UCS2-H_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/GB1/UniGB-UCS2-V_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/83pv-RKSJ-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/90ms-RKSJ-H_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/90ms-RKSJ-V_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/90msp-RKSJ-H_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/90msp-RKSJ-V_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/90pv-RKSJ-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/Add-RKSJ-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/Add-RKSJ-V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/Adobe-Japan1-UCS2_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/cmaps_japan1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/EUC-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/EUC-V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/Ext-RKSJ-H_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/Ext-RKSJ-V_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/UniJIS-UCS2-HW-H_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/UniJIS-UCS2-HW-V_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/UniJIS-UCS2-H_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/UniJIS-UCS2-V_4.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Japan1/V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/Adobe-Korea1-UCS2_2.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/cmaps_korea1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSC-EUC-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSC-EUC-V_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSCms-UHC-HW-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSCms-UHC-HW-V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSCms-UHC-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSCms-UHC-V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/KSCpc-EUC-H_0.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/UniKS-UCS2-H_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/UniKS-UCS2-V_1.cpp
${PdfiumDir}/core/fpdfapi/cmaps/Korea1/UniKS-UTF16-H_0.cpp
${PdfiumDir}/core/fpdfapi/cpdf_modulemgr.cpp
${PdfiumDir}/core/fpdfapi/cpdf_pagerendercontext.cpp
${PdfiumDir}/core/fpdfapi/edit/cpdf_creator.cpp
${PdfiumDir}/core/fpdfapi/edit/cpdf_encryptor.cpp
${PdfiumDir}/core/fpdfapi/edit/cpdf_flateencoder.cpp
${PdfiumDir}/core/fpdfapi/edit/cpdf_pagecontentgenerator.cpp
#${PdfiumDir}/core/fpdfapi/edit/cpdf_pagecontentgenerator_unittest.cpp
${PdfiumDir}/core/fpdfapi/font/cfx_cttgsubtable.cpp
${PdfiumDir}/core/fpdfapi/font/cfx_stockfontarray.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_cid2unicodemap.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_cidfont.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_cmap.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_cmapmanager.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_cmapparser.cpp
#${PdfiumDir}/core/fpdfapi/font/cpdf_cmapparser_unittest.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_font.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_fontencoding.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_fontglobals.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_simplefont.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_tounicodemap.cpp
#${PdfiumDir}/core/fpdfapi/font/cpdf_tounicodemap_unittest.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_truetypefont.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_type1font.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_type3char.cpp
${PdfiumDir}/core/fpdfapi/font/cpdf_type3font.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_allstates.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_clippath.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_color.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_colorspace.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_colorstate.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_contentmark.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_contentmarkitem.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_contentparser.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_devicecs.cpp
#${PdfiumDir}/core/fpdfapi/page/cpdf_devicecs_unittest.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_docpagedata.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_expintfunc.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_form.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_formobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_function.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_generalstate.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_graphicstates.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_iccprofile.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_image.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_imageobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_meshstream.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_page.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pagemodule.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pageobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pageobjectholder.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pageobjectlist.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_path.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pathobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_pattern.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_patterncs.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_psengine.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_psfunc.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_sampledfunc.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_shadingobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_shadingpattern.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_stitchfunc.cpp
#${PdfiumDir}/core/fpdfapi/page/cpdf_stitchfunc_embeddertest.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_streamcontentparser.cpp
#${PdfiumDir}/core/fpdfapi/page/cpdf_streamcontentparser_unittest.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_streamparser.cpp
#${PdfiumDir}/core/fpdfapi/page/cpdf_streamparser_unittest.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_textobject.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_textstate.cpp
${PdfiumDir}/core/fpdfapi/page/cpdf_tilingpattern.cpp
${PdfiumDir}/core/fpdfapi/parser/cfdf_document.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_array.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_array_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_boolean.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_crypto_handler.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_data_avail.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_dictionary.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_document.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_document_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_hint_tables.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_indirect_object_holder.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_linearized_header.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_name.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_null.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_number.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_object.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_object_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_parser.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_parser_embeddertest.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_parser_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_read_validator.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_read_validator_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_reference.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_security_handler.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_security_handler_embeddertest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_simple_parser.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_simple_parser_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_stream.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_stream_acc.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_string.cpp
${PdfiumDir}/core/fpdfapi/parser/cpdf_syntax_parser.cpp
#${PdfiumDir}/core/fpdfapi/parser/cpdf_syntax_parser_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/fpdf_parser_decode.cpp
#${PdfiumDir}/core/fpdfapi/parser/fpdf_parser_decode_embeddertest.cpp
#${PdfiumDir}/core/fpdfapi/parser/fpdf_parser_decode_unittest.cpp
${PdfiumDir}/core/fpdfapi/parser/fpdf_parser_utility.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_charposlist.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_devicebuffer.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_dibsource.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_dibtransferfunc.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_docrenderdata.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_imagecacheentry.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_imageloader.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_imagerenderer.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_pagerendercache.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_progressiverenderer.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_rendercontext.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_renderoptions.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_renderstatus.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_scaledrenderbuffer.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_textrenderer.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_transferfunc.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_type3cache.cpp
${PdfiumDir}/core/fpdfapi/render/cpdf_type3glyphs.cpp
#${PdfiumDir}/core/fpdfapi/render/fpdf_render_loadimage_embeddertest.cpp
#${PdfiumDir}/core/fpdfapi/render/fpdf_render_pattern_embeddertest.cpp
${PdfiumDir}/core/fpdfdoc/cline.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_aaction.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_action.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_actionfields.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_annot.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_annotlist.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_apsettings.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_bookmark.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_bookmarktree.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_defaultappearance.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_dest.cpp
#${PdfiumDir}/core/fpdfdoc/cpdf_dest_unittest.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_docjsactions.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_filespec.cpp
#${PdfiumDir}/core/fpdfdoc/cpdf_filespec_unittest.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_formcontrol.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_formfield.cpp
#${PdfiumDir}/core/fpdfdoc/cpdf_formfield_unittest.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_iconfit.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_interform.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_link.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_linklist.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_metadata.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_nametree.cpp
#${PdfiumDir}/core/fpdfdoc/cpdf_nametree_unittest.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_numbertree.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_occontext.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_pagelabel.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_structelement.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_structtree.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_variabletext.cpp
${PdfiumDir}/core/fpdfdoc/cpdf_viewerpreferences.cpp
${PdfiumDir}/core/fpdfdoc/cpvt_color.cpp
${PdfiumDir}/core/fpdfdoc/cpvt_fontmap.cpp
${PdfiumDir}/core/fpdfdoc/cpvt_generateap.cpp
${PdfiumDir}/core/fpdfdoc/cpvt_sectioninfo.cpp
${PdfiumDir}/core/fpdfdoc/cpvt_wordinfo.cpp
${PdfiumDir}/core/fpdfdoc/csection.cpp
${PdfiumDir}/core/fpdfdoc/ctypeset.cpp
${PdfiumDir}/core/fpdftext/cpdf_linkextract.cpp
#${PdfiumDir}/core/fpdftext/cpdf_linkextract_unittest.cpp
${PdfiumDir}/core/fpdftext/cpdf_textpage.cpp
${PdfiumDir}/core/fpdftext/cpdf_textpagefind.cpp
${PdfiumDir}/core/fpdftext/unicodenormalizationdata.cpp
##${PdfiumDir}/core/fxcodec/codec/ccodec_bmpmodule.cpp
##${PdfiumDir}/core/fxcodec/codec/ccodec_gifmodule.cpp
##${PdfiumDir}/core/fxcodec/codec/ccodec_pngmodule.cpp
##${PdfiumDir}/core/fxcodec/codec/ccodec_tiffmodule.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec.cpp
#${PdfiumDir}/core/fxcodec/codec/fx_codec_a85_unittest.cpp
#${PdfiumDir}/core/fxcodec/codec/fx_codec_embeddertest.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_fax.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_flate.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_icc.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_jbig.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_jpeg.cpp
${PdfiumDir}/core/fxcodec/codec/fx_codec_jpx_opj.cpp
#${PdfiumDir}/core/fxcodec/codec/fx_codec_jpx_unittest.cpp
##${PdfiumDir}/core/fxcodec/codec/fx_codec_progress.cpp
#${PdfiumDir}/core/fxcodec/codec/fx_codec_rle_unittest.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_ArithDecoder.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_ArithIntDecoder.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_BitStream.cpp
#${PdfiumDir}/core/fxcodec/jbig2/JBig2_BitStream_unittest.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_Context.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_GrdProc.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_GrrdProc.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_HtrdProc.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_HuffmanDecoder.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_HuffmanTable.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_HuffmanTable_Standard.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_Image.cpp
#${PdfiumDir}/core/fxcodec/jbig2/JBig2_Image_unittest.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_PatternDict.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_PddProc.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_SddProc.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_Segment.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_SymbolDict.cpp
${PdfiumDir}/core/fxcodec/jbig2/JBig2_TrdProc.cpp
${PdfiumDir}/core/fxcodec/lbmp/fx_bmp.cpp
${PdfiumDir}/core/fxcodec/lgif/cgifcontext.cpp
${PdfiumDir}/core/fxcodec/lgif/fx_gif.cpp
${PdfiumDir}/core/fxcrt/cfx_blockbuffer.cpp
${PdfiumDir}/core/fxcrt/cfx_bytestring.cpp
#${PdfiumDir}/core/fxcrt/cfx_bytestring_unittest.cpp
##${PdfiumDir}/core/fxcrt/cfx_char.cpp
${PdfiumDir}/core/fxcrt/cfx_chariter.cpp
${PdfiumDir}/core/fxcrt/cfx_checksumcontext.cpp
${PdfiumDir}/core/fxcrt/cfx_crtfileaccess.cpp
${PdfiumDir}/core/fxcrt/cfx_datetime.cpp
${PdfiumDir}/core/fxcrt/cfx_decimal.cpp
#${PdfiumDir}/core/fxcrt/cfx_maybe_owned_unittest.cpp
${PdfiumDir}/core/fxcrt/cfx_memorystream.cpp
#${PdfiumDir}/core/fxcrt/cfx_observable_unittest.cpp
#${PdfiumDir}/core/fxcrt/cfx_retain_ptr_unittest.cpp
${PdfiumDir}/core/fxcrt/cfx_seekablestreamproxy.cpp
#${PdfiumDir}/core/fxcrt/cfx_shared_copy_on_write_unittest.cpp
#${PdfiumDir}/core/fxcrt/cfx_string_pool_template_unittest.cpp
#${PdfiumDir}/core/fxcrt/cfx_unowned_ptr_unittest.cpp
#${PdfiumDir}/core/fxcrt/cfx_weak_ptr_unittest.cpp
${PdfiumDir}/core/fxcrt/cfx_widestring.cpp
#${PdfiumDir}/core/fxcrt/cfx_widestring_unittest.cpp
${PdfiumDir}/core/fxcrt/cfx_wordbreak.cpp
${PdfiumDir}/core/fxcrt/fxcrt_posix.cpp
${PdfiumDir}/core/fxcrt/fxcrt_windows.cpp
##${PdfiumDir}/core/fxcrt/fx_arabic.cpp
${PdfiumDir}/core/fxcrt/fx_basic_buffer.cpp
${PdfiumDir}/core/fxcrt/fx_basic_gcc.cpp
#${PdfiumDir}/core/fxcrt/fx_basic_gcc_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_basic_utf.cpp
${PdfiumDir}/core/fxcrt/fx_basic_util.cpp
#${PdfiumDir}/core/fxcrt/fx_basic_util_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_bidi.cpp
#${PdfiumDir}/core/fxcrt/fx_bidi_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_coordinates.cpp
#${PdfiumDir}/core/fxcrt/fx_coordinates_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_extension.cpp
#${PdfiumDir}/core/fxcrt/fx_extension_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_memory.cpp
#${PdfiumDir}/core/fxcrt/fx_memory_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_stream.cpp
${PdfiumDir}/core/fxcrt/fx_system.cpp
#${PdfiumDir}/core/fxcrt/fx_system_unittest.cpp
${PdfiumDir}/core/fxcrt/fx_ucddata.cpp
${PdfiumDir}/core/fxcrt/fx_unicode.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_saxcontext.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_saxreader.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_saxreaderhandler.cpp
#${PdfiumDir}/core/fxcrt/xml/cfx_saxreader_unittest.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlattributenode.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlchardata.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmldoc.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlelement.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlinstruction.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlnode.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlparser.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmlsyntaxparser.cpp
#${PdfiumDir}/core/fxcrt/xml/cfx_xmlsyntaxparser_unittest.cpp
${PdfiumDir}/core/fxcrt/xml/cfx_xmltext.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_attritem.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_attrmap.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_content.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_databufacc.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_element.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_object.cpp
${PdfiumDir}/core/fxcrt/xml/cxml_parser.cpp
${PdfiumDir}/core/fxge/agg/fx_agg_driver.cpp
##${PdfiumDir}/core/fxge/android/cfpf_skiadevicemodule.cpp
##${PdfiumDir}/core/fxge/android/cfpf_skiafont.cpp
##${PdfiumDir}/core/fxge/android/cfpf_skiafontmgr.cpp
###${PdfiumDir}/core/fxge/android/cfx_androidfontinfo.cpp
###${PdfiumDir}/core/fxge/android/fx_android_imp.cpp
###${PdfiumDir}/core/fxge/apple/fx_apple_platform.cpp
###${PdfiumDir}/core/fxge/apple/fx_mac_imp.cpp
###${PdfiumDir}/core/fxge/apple/fx_quartz_device.cpp
${PdfiumDir}/core/fxge/cfx_cliprgn.cpp
${PdfiumDir}/core/fxge/cfx_color.cpp
${PdfiumDir}/core/fxge/cfx_facecache.cpp
${PdfiumDir}/core/fxge/cfx_folderfontinfo.cpp
${PdfiumDir}/core/fxge/cfx_font.cpp
${PdfiumDir}/core/fxge/cfx_fontcache.cpp
${PdfiumDir}/core/fxge/cfx_fontmapper.cpp
${PdfiumDir}/core/fxge/cfx_fontmgr.cpp
${PdfiumDir}/core/fxge/cfx_gemodule.cpp
${PdfiumDir}/core/fxge/cfx_graphstate.cpp
${PdfiumDir}/core/fxge/cfx_graphstatedata.cpp
${PdfiumDir}/core/fxge/cfx_pathdata.cpp
${PdfiumDir}/core/fxge/cfx_renderdevice.cpp
${PdfiumDir}/core/fxge/cfx_substfont.cpp
${PdfiumDir}/core/fxge/cfx_unicodeencoding.cpp
##${PdfiumDir}/core/fxge/cfx_unicodeencodingex.cpp
${PdfiumDir}/core/fxge/cttfontdesc.cpp
${PdfiumDir}/core/fxge/dib/cfx_bitmapcomposer.cpp
${PdfiumDir}/core/fxge/dib/cfx_bitmapstorer.cpp
${PdfiumDir}/core/fxge/dib/cfx_dibextractor.cpp
${PdfiumDir}/core/fxge/dib/cfx_dibitmap.cpp
${PdfiumDir}/core/fxge/dib/cfx_dibsource.cpp
${PdfiumDir}/core/fxge/dib/cfx_filtereddib.cpp
${PdfiumDir}/core/fxge/dib/cfx_imagerenderer.cpp
${PdfiumDir}/core/fxge/dib/cfx_imagestretcher.cpp
${PdfiumDir}/core/fxge/dib/cfx_imagetransformer.cpp
${PdfiumDir}/core/fxge/dib/cfx_scanlinecompositor.cpp
${PdfiumDir}/core/fxge/dib/cstretchengine.cpp
#${PdfiumDir}/core/fxge/dib/cstretchengine_unittest.cpp
${PdfiumDir}/core/fxge/dib/fx_dib_main.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitDingbats.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitFixed.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitFixedBold.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitFixedBoldItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitFixedItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSans.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSansBold.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSansBoldItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSansItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSansMM.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSerif.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSerifBold.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSerifBoldItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSerifItalic.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSerifMM.cpp
${PdfiumDir}/core/fxge/fontdata/chromefontdata/FoxitSymbol.cpp
${PdfiumDir}/core/fxge/freetype/fx_freetype.cpp
${PdfiumDir}/core/fxge/fx_ge_fontmap.cpp
${PdfiumDir}/core/fxge/fx_ge_linux.cpp
${PdfiumDir}/core/fxge/fx_ge_text.cpp
#${PdfiumDir}/core/fxge/fx_ge_text_embeddertest.cpp
${PdfiumDir}/core/fxge/ifx_renderdevicedriver.cpp
##${PdfiumDir}/core/fxge/skia/fx_skia_device.cpp
#${PdfiumDir}/core/fxge/skia/fx_skia_device_unittest.cpp
${PdfiumDir}/core/fxge/win32/cfx_psrenderer.cpp
${PdfiumDir}/core/fxge/win32/cpsoutput.cpp
${PdfiumDir}/core/fxge/win32/fx_win32_device.cpp
${PdfiumDir}/core/fxge/win32/fx_win32_dib.cpp
${PdfiumDir}/core/fxge/win32/fx_win32_dwrite.cpp
${PdfiumDir}/core/fxge/win32/fx_win32_gdipext.cpp
${PdfiumDir}/core/fxge/win32/fx_win32_print.cpp
${PdfiumDir}/fpdfsdk/cba_annotiterator.cpp
${PdfiumDir}/fpdfsdk/cfx_systemhandler.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_annot.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_annothandlermgr.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_annotiteration.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_baannot.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_baannothandler.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_datetime.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_formfillenvironment.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_interform.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_pageview.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_widget.cpp
${PdfiumDir}/fpdfsdk/cpdfsdk_widgethandler.cpp
##${PdfiumDir}/fpdfsdk/cpdfsdk_xfawidget.cpp
##${PdfiumDir}/fpdfsdk/cpdfsdk_xfawidgethandler.cpp
${PdfiumDir}/fpdfsdk/formfiller/cba_fontmap.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_button.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_checkbox.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_combobox.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_formfiller.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_interactiveformfiller.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_listbox.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_pushbutton.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_radiobutton.cpp
${PdfiumDir}/fpdfsdk/formfiller/cffl_textfield.cpp
${PdfiumDir}/fpdfsdk/fpdfannot.cpp
#${PdfiumDir}/fpdfsdk/fpdfannot_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfattachment.cpp
#${PdfiumDir}/fpdfsdk/fpdfattachment_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfdoc.cpp
#${PdfiumDir}/fpdfsdk/fpdfdoc_embeddertest.cpp
#${PdfiumDir}/fpdfsdk/fpdfdoc_unittest.cpp
${PdfiumDir}/fpdfsdk/fpdfeditimg.cpp
#${PdfiumDir}/fpdfsdk/fpdfeditimg_unittest.cpp
${PdfiumDir}/fpdfsdk/fpdfeditpage.cpp
${PdfiumDir}/fpdfsdk/fpdfeditpath.cpp
${PdfiumDir}/fpdfsdk/fpdfedittext.cpp
#${PdfiumDir}/fpdfsdk/fpdfedit_embeddertest.cpp
#${PdfiumDir}/fpdfsdk/fpdfext_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfformfill.cpp
#${PdfiumDir}/fpdfsdk/fpdfformfill_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfppo.cpp
#${PdfiumDir}/fpdfsdk/fpdfppo_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfsave.cpp
#${PdfiumDir}/fpdfsdk/fpdfsave_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdftext.cpp
#${PdfiumDir}/fpdfsdk/fpdftext_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdfview.cpp
#${PdfiumDir}/fpdfsdk/fpdfview_embeddertest.cpp
#${PdfiumDir}/fpdfsdk/fpdfview_unittest.cpp
##${PdfiumDir}/fpdfsdk/fpdfxfa/cpdfxfa_context.cpp
##${PdfiumDir}/fpdfsdk/fpdfxfa/cpdfxfa_docenvironment.cpp
##${PdfiumDir}/fpdfsdk/fpdfxfa/cpdfxfa_page.cpp
##${PdfiumDir}/fpdfsdk/fpdfxfa/cxfa_fwladaptertimermgr.cpp
${PdfiumDir}/fpdfsdk/fpdf_dataavail.cpp
#${PdfiumDir}/fpdfsdk/fpdf_dataavail_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdf_ext.cpp
${PdfiumDir}/fpdfsdk/fpdf_flatten.cpp
#${PdfiumDir}/fpdfsdk/fpdf_flatten_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdf_progressive.cpp
${PdfiumDir}/fpdfsdk/fpdf_searchex.cpp
${PdfiumDir}/fpdfsdk/fpdf_structtree.cpp
#${PdfiumDir}/fpdfsdk/fpdf_structtree_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fpdf_sysfontinfo.cpp
${PdfiumDir}/fpdfsdk/fpdf_transformpage.cpp
${PdfiumDir}/fpdfsdk/fsdk_actionhandler.cpp
#${PdfiumDir}/fpdfsdk/fsdk_baseform_embeddertest.cpp
${PdfiumDir}/fpdfsdk/fsdk_filewriteadapter.cpp
${PdfiumDir}/fpdfsdk/fsdk_pauseadapter.cpp
##${PdfiumDir}/fpdfsdk/javascript/Annot.cpp
##${PdfiumDir}/fpdfsdk/javascript/app.cpp
##${PdfiumDir}/fpdfsdk/javascript/cjs_event_context.cpp
##${PdfiumDir}/fpdfsdk/javascript/cjs_runtime.cpp
##${PdfiumDir}/fpdfsdk/javascript/color.cpp
##${PdfiumDir}/fpdfsdk/javascript/console.cpp
##${PdfiumDir}/fpdfsdk/javascript/Consts.cpp
##${PdfiumDir}/fpdfsdk/javascript/Document.cpp
##${PdfiumDir}/fpdfsdk/javascript/event.cpp
##${PdfiumDir}/fpdfsdk/javascript/Field.cpp
##${PdfiumDir}/fpdfsdk/javascript/global.cpp
##${PdfiumDir}/fpdfsdk/javascript/Icon.cpp
##${PdfiumDir}/fpdfsdk/javascript/JS_EventHandler.cpp
##${PdfiumDir}/fpdfsdk/javascript/JS_GlobalData.cpp
##${PdfiumDir}/fpdfsdk/javascript/JS_KeyValue.cpp
##${PdfiumDir}/fpdfsdk/javascript/JS_Object.cpp
${PdfiumDir}/fpdfsdk/javascript/JS_Runtime_Stub.cpp
##${PdfiumDir}/fpdfsdk/javascript/JS_Value.cpp
##${PdfiumDir}/fpdfsdk/javascript/PublicMethods.cpp
#${PdfiumDir}/fpdfsdk/javascript/public_methods_embeddertest.cpp
#${PdfiumDir}/fpdfsdk/javascript/public_methods_unittest.cpp
##${PdfiumDir}/fpdfsdk/javascript/report.cpp
##${PdfiumDir}/fpdfsdk/javascript/resource.cpp
##${PdfiumDir}/fpdfsdk/javascript/util.cpp
#${PdfiumDir}/fpdfsdk/javascript/util_unittest.cpp
${PdfiumDir}/fpdfsdk/pdfsdk_fieldaction.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_appstream.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_button.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_caret.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_combo_box.cpp
#${PdfiumDir}/fpdfsdk/pwl/cpwl_combo_box_embeddertest.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_edit.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_edit_ctrl.cpp
#${PdfiumDir}/fpdfsdk/pwl/cpwl_edit_embeddertest.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_edit_impl.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_font_map.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_icon.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_list_box.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_list_impl.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_scroll_bar.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_special_button.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_timer.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_timer_handler.cpp
${PdfiumDir}/fpdfsdk/pwl/cpwl_wnd.cpp
${PdfiumDir}/fxbarcode/BC_Library.cpp
${PdfiumDir}/fxbarcode/BC_TwoDimWriter.cpp
${PdfiumDir}/fxbarcode/BC_UtilCodingConvert.cpp
${PdfiumDir}/fxbarcode/BC_Utils.cpp
${PdfiumDir}/fxbarcode/BC_Writer.cpp
${PdfiumDir}/fxbarcode/cbc_codabar.cpp
${PdfiumDir}/fxbarcode/cbc_code128.cpp
${PdfiumDir}/fxbarcode/cbc_code39.cpp
${PdfiumDir}/fxbarcode/cbc_codebase.cpp
${PdfiumDir}/fxbarcode/cbc_datamatrix.cpp
${PdfiumDir}/fxbarcode/cbc_ean13.cpp
${PdfiumDir}/fxbarcode/cbc_ean8.cpp
${PdfiumDir}/fxbarcode/cbc_onecode.cpp
${PdfiumDir}/fxbarcode/cbc_pdf417i.cpp
${PdfiumDir}/fxbarcode/cbc_qrcode.cpp
${PdfiumDir}/fxbarcode/cbc_upca.cpp
${PdfiumDir}/fxbarcode/common/BC_CommonBitArray.cpp
${PdfiumDir}/fxbarcode/common/BC_CommonBitMatrix.cpp
${PdfiumDir}/fxbarcode/common/BC_CommonByteArray.cpp
${PdfiumDir}/fxbarcode/common/BC_CommonByteMatrix.cpp
${PdfiumDir}/fxbarcode/common/reedsolomon/BC_ReedSolomon.cpp
${PdfiumDir}/fxbarcode/common/reedsolomon/BC_ReedSolomonGF256.cpp
${PdfiumDir}/fxbarcode/common/reedsolomon/BC_ReedSolomonGF256Poly.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_ASCIIEncoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_Base256Encoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_C40Encoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_DataMatrixSymbolInfo144.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_DataMatrixWriter.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_DefaultPlacement.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_EdifactEncoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_Encoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_EncoderContext.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_ErrorCorrection.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_HighLevelEncoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_SymbolInfo.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_TextEncoder.cpp
${PdfiumDir}/fxbarcode/datamatrix/BC_X12Encoder.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedCodaBarWriter.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedCode128Writer.cpp
#${PdfiumDir}/fxbarcode/oned/BC_OnedCode128Writer_unittest.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedCode39Writer.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedEAN13Writer.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedEAN8Writer.cpp
##${PdfiumDir}/fxbarcode/oned/BC_OneDimWriter.cpp
${PdfiumDir}/fxbarcode/oned/BC_OnedUPCAWriter.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417BarcodeMatrix.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417BarcodeRow.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417Compaction.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417ErrorCorrection.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417HighLevelEncoder.cpp
#${PdfiumDir}/fxbarcode/pdf417/BC_PDF417HighLevelEncoder_unittest.cpp
${PdfiumDir}/fxbarcode/pdf417/BC_PDF417Writer.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoder.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderBitVector.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderBlockPair.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderECBlocks.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderECBlocksData.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderEncoder.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderErrorCorrectionLevel.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderMaskUtil.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderMatrixUtil.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderMode.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCoderVersion.cpp
${PdfiumDir}/fxbarcode/qrcode/BC_QRCodeWriter.cpp
##${PdfiumDir}/fxjs/cfxjse_arguments.cpp
##${PdfiumDir}/fxjs/cfxjse_class.cpp
##${PdfiumDir}/fxjs/cfxjse_context.cpp
##${PdfiumDir}/fxjs/cfxjse_isolatetracker.cpp
##${PdfiumDir}/fxjs/cfxjse_runtimedata.cpp
##${PdfiumDir}/fxjs/cfxjse_value.cpp
##${PdfiumDir}/fxjs/fxjs_v8.cpp
#${PdfiumDir}/fxjs/fxjs_v8_embeddertest.cpp
${PdfiumDir}/third_party/agg23/agg_curves.cpp
${PdfiumDir}/third_party/agg23/agg_path_storage.cpp
${PdfiumDir}/third_party/agg23/agg_rasterizer_scanline_aa.cpp
${PdfiumDir}/third_party/agg23/agg_vcgen_dash.cpp
${PdfiumDir}/third_party/agg23/agg_vcgen_stroke.cpp
#${PdfiumDir}/tools/gyp/test/compilable/src/lib1.cpp
#${PdfiumDir}/tools/gyp/test/compilable/src/program.cpp
#${PdfiumDir}/tools/gyp/test/mac/cflags/cppfile.cpp
#${PdfiumDir}/tools/gyp/test/mac/cflags/cppfile_withcflags.cpp
#${PdfiumDir}/tools/gyp/test/msvs/external_builder/hello.cpp
#${PdfiumDir}/tools/gyp/test/msvs/list_excluded/hello.cpp
#${PdfiumDir}/tools/gyp/test/msvs/list_excluded/hello_mac.cpp
#${PdfiumDir}/tools/gyp/test/win/rc-build/hello.cpp
#${PdfiumDir}/tools/gyp/test/xcode-ninja/list_excluded/hello.cpp
#${PdfiumDir}/tools/gyp/test/xcode-ninja/list_excluded/hello_excluded.cpp
${PdfiumDir}/third_party/base/allocator/partition_allocator/address_space_randomization.cc
${PdfiumDir}/third_party/base/allocator/partition_allocator/page_allocator.cc
${PdfiumDir}/third_party/base/allocator/partition_allocator/partition_alloc.cc
${PdfiumDir}/third_party/base/allocator/partition_allocator/spin_lock.cc
${PdfiumDir}/third_party/bigint/BigInteger.cc
${PdfiumDir}/third_party/bigint/BigIntegerUtils.cc
${PdfiumDir}/third_party/bigint/BigUnsigned.cc
${PdfiumDir}/third_party/bigint/BigUnsignedInABase.cc
#${PdfiumDir}/third_party/freetype/src/src/tools/ftfuzzer/ftfuzzer.cc
#${PdfiumDir}/third_party/freetype/src/src/tools/ftfuzzer/ftmutator.cc
#${PdfiumDir}/third_party/freetype/src/src/tools/ftfuzzer/rasterfuzzer.cc
#${PdfiumDir}/third_party/freetype/src/src/tools/ftfuzzer/runinput.cc


)

install(TARGETS pdfium)

