target_sources(SDKlib PRIVATE
                      avl_tree.h
                      avl_tree_forward.h
                      avl_tree_iterator.h
                      avl_tree_node.h
                      avl_tree_traits.h
                      buffer.h
                      buffer_forward.h
                      buffer_pointer.h
                      database_builder.h
                      displaced_buffer.h
                      displaced_buffer_forward.h
                      displaced_buffer_pointer.h
                      file_access.h
                      file_append_request.h
                      file_append_request_forward.h
                      file_buffer.h
                      file_context.h
                      file_context_badge.h
                      file_info_context.h
                      file_info_context_badge.h
                      file_info_context_badge_forward.h
                      file_range_context.h
                      file_range_context_forward.h
                      file_range_context_manager.h
                      file_range_context_manager_forward.h
                      file_range_context_pointer.h
                      file_range_context_pointer_map.h
                      file_range_map.h
                      file_range_set.h
                      file_range_traits.h
                      file_range_tree.h
                      file_range_tree_node.h
                      file_range_tree_traits.h
                      file_read_request.h
                      file_read_request_forward.h
                      file_read_request_set.h
                      file_read_write_state.h
                      file_service_context.h
                      file_service_queries.h
                      file_storage.h
                      file_truncate_request.h
                      file_truncate_request_forward.h
                      file_write_request.h
                      file_write_request_forward.h
                      from_file_id_map.h
                      logger.h
                      logging.h
                      memory_buffer.h
                      type_traits.h
)

add_subdirectory(testing)

